Fix artifacts in Motion Blur filter

1) Kernel size should be odd to do convolution right
2) halfWidth/halfHeight should be calculated consistently in all the
   three functions. Before the ptch there was a misprint in needRect
   and changeRect: both used 'cos' for both width and height.

BUG:414983